--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -21,7 +21,7 @@
             <div class="my-card-wrapper" appJsOnscroll padding=60 (onStateChange)="headerStateChange($event)">
                 <div id="test" class="my-card">
                     <h1 class="name">Jayabratha Saha</h1>
-                    <div class="title">Designer & Developer</div>
+                    <div class="title">Artist & Developer</div>
                     <div class="github-link"><i class="icon-social-github"></i></div>
                 </div>
             </div>
@@ -30,8 +30,8 @@
     <nav class="site-nav center-stage absolute-bottom">
         <ul class="site-nav-list">
             <li (mouseenter)="activeNav='art'" (mouseleave)="activeNav=''">Art</li>
-            <li (mouseenter)="activeNav='work'" (mouseleave)="activeNav=''">Work</li>
-            <li (mouseenter)="activeNav='skills'" (mouseleave)="activeNav=''">Skills</li>
+            <li (mouseenter)="activeNav='work'" (mouseleave)="activeNav=''">Projects</li>
+            <li (mouseenter)="activeNav='skills'" (mouseleave)="activeNav=''">Blog</li>
             <li (mouseenter)="activeNav='about'" (mouseleave)="activeNav=''">About</li>
             <li (mouseenter)="activeNav='contact'" (mouseleave)="activeNav=''">Contact</li>
         </ul>
