--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             </div>
         </div>
       </div>
-      <div class="overview work-overview below-view" appJsOnscroll [restoreInitial]="restoreInitial" [viewportCheck]=true [padding]=200 (onStateChange)="animateEnter($event)" >
+      <div class="overview projects-overview below-view" appJsOnscroll [restoreInitial]="restoreInitial" [viewportCheck]=true [padding]=200 (onStateChange)="animateEnter($event)" >
         <div class="dp overview-dp">
           <h2>Projects</h2>
           <div class="alpha-initial-bg">w</div>  
