--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -315,7 +315,7 @@ ul.site-nav-list li {
     left: 0;
     width: 20%;
 }
-.nav-highlighter.work {
+.nav-highlighter.projects {
     background: #c6116b;
     left: 20%;
     width: 20%;
