--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -30,7 +30,7 @@
     <nav class="site-nav center-stage absolute-bottom">
         <ul class="site-nav-list">
             <li (mouseenter)="activeNav='art'" (mouseleave)="activeNav=''">Art</li>
-            <li (mouseenter)="activeNav='work'" (mouseleave)="activeNav=''">Projects</li>
+            <li (mouseenter)="activeNav='projects'" (mouseleave)="activeNav=''">Projects</li>
             <li (mouseenter)="activeNav='skills'" (mouseleave)="activeNav=''">Blog</li>
             <li (mouseenter)="activeNav='about'" (mouseleave)="activeNav=''">About</li>
             <li (mouseenter)="activeNav='contact'" (mouseleave)="activeNav=''">Contact</li>
