--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
-  (onStateChange)="animateEnter($event)">
+<div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
   <div class="dp overview-dp">
     <h2>Art</h2>
     <div class="alpha-initial-bg">A</div>
@@ -11,8 +10,7 @@
     </div>
   </div>
 </div>
-<div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
-  (onStateChange)="animateEnter($event)">
+<div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
   <div class="dp overview-dp">
     <h2>Projects</h2>
     <div class="alpha-initial-bg">w</div>
@@ -24,8 +22,7 @@
     </div>
   </div>
 </div>
-<div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
-  (onStateChange)="animateEnter($event)">
+<div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
   <div class="dp overview-dp">
     <h2>Blog</h2>
     <div class="alpha-initial-bg">S</div>
@@ -37,8 +34,7 @@
     </div>
   </div>
 </div>
-<div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
-  (onStateChange)="animateEnter($event)">
+<div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
   <div class="dp overview-dp">
     <h2>About</h2>
     <div class="alpha-initial-bg">A</div>
@@ -50,8 +46,7 @@
     </div>
   </div>
 </div>
-<div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200
-  (onStateChange)="animateEnter($event)">
+<div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
   <div class="dp overview-dp">
     <h2>Contact</h2>
     <div class="alpha-initial-bg">C</div>
