--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,60 +1,62 @@
-<div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
-  <div class="dp overview-dp">
-    <h2>Art</h2>
-    <div class="alpha-initial-bg">A</div>
-    <div class="underline"></div>
-    <button>VIEW GALLERY</button>
-  </div>
-  <div class="overview-content-wrapper">
-    <div class="overview-content">
+<div class="home-content center-stage">
+  <div class="overview art-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200>
+    <div class="dp overview-dp">
+      <h2>Art</h2>
+      <div class="alpha-initial-bg">A</div>
+      <div class="underline"></div>
+      <button routerLink="/art">VIEW GALLERY</button>
+    </div>
+    <div class="overview-content-wrapper">
+      <div class="overview-content">
+      </div>
     </div>
   </div>
-</div>
-<div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
-  <div class="dp overview-dp">
-    <h2>Projects</h2>
-    <div class="alpha-initial-bg">w</div>
-    <div class="underline"></div>
-    <button>VIEW PROJECTS</button>
-  </div>
-  <div class="overview-content-wrapper">
-    <div class="overview-content">
+  <div class="overview projects-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200>
+    <div class="dp overview-dp">
+      <h2>Projects</h2>
+      <div class="alpha-initial-bg">w</div>
+      <div class="underline"></div>
+      <button>VIEW PROJECTS</button>
+    </div>
+    <div class="overview-content-wrapper">
+      <div class="overview-content">
+      </div>
     </div>
   </div>
-</div>
-<div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
-  <div class="dp overview-dp">
-    <h2>Blog</h2>
-    <div class="alpha-initial-bg">S</div>
-    <div class="underline"></div>
-    <button>GO TO BLOG</button>
-  </div>
-  <div class="overview-content-wrapper">
-    <div class="overview-content">
+  <div class="overview skills-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200>
+    <div class="dp overview-dp">
+      <h2>Blog</h2>
+      <div class="alpha-initial-bg">S</div>
+      <div class="underline"></div>
+      <button>GO TO BLOG</button>
+    </div>
+    <div class="overview-content-wrapper">
+      <div class="overview-content">
+      </div>
     </div>
   </div>
-</div>
-<div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
-  <div class="dp overview-dp">
-    <h2>About</h2>
-    <div class="alpha-initial-bg">A</div>
-    <div class="underline"></div>
-    <button>ABOUT ME</button>
-  </div>
-  <div class="overview-content-wrapper">
-    <div class="overview-content">
+  <div class="overview about-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200>
+    <div class="dp overview-dp">
+      <h2>About</h2>
+      <div class="alpha-initial-bg">A</div>
+      <div class="underline"></div>
+      <button>ABOUT ME</button>
+    </div>
+    <div class="overview-content-wrapper">
+      <div class="overview-content">
+      </div>
     </div>
   </div>
-</div>
-<div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200 >
-  <div class="dp overview-dp">
-    <h2>Contact</h2>
-    <div class="alpha-initial-bg">C</div>
-    <div class="underline"></div>
-    <button>CONTACT ME</button>
-  </div>
-  <div class="overview-content-wrapper">
-    <div class="overview-content">
+  <div class="overview contact-overview below-view" appJsOnscroll [viewportCheck]=true [padding]=200>
+    <div class="dp overview-dp">
+      <h2>Contact</h2>
+      <div class="alpha-initial-bg">C</div>
+      <div class="underline"></div>
+      <button>CONTACT ME</button>
+    </div>
+    <div class="overview-content-wrapper">
+      <div class="overview-content">
+      </div>
     </div>
   </div>
 </div>
