--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="background">
   <me-card></me-card>
-  <div class="main-content center-stage">
+  <div class="main-content">
     <router-outlet></router-outlet>
   </div>
   <footer class="main-footer"></footer>
