--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,3 +1,5 @@
-<div class="art-content">
-  <h1>Art</h1>
+<div class="content art-content">
+  <div class="center-stage">
+    <h1>Art</h1>
+  </div>
 </div>
