--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -30,10 +30,10 @@
     <nav class="site-nav center-stage absolute-bottom">
         <ul class="site-nav-list">
             <li (mouseenter)="activeNav='art'" (mouseleave)="activeNav=''" routerLink="/art">Art</li>
-            <li (mouseenter)="activeNav='projects'" (mouseleave)="activeNav=''">Projects</li>
-            <li (mouseenter)="activeNav='skills'" (mouseleave)="activeNav=''">Blog</li>
-            <li (mouseenter)="activeNav='about'" (mouseleave)="activeNav=''">About</li>
-            <li (mouseenter)="activeNav='contact'" (mouseleave)="activeNav=''">Contact</li>
+            <li (mouseenter)="activeNav='projects'" (mouseleave)="activeNav=''" routerLink="/projects">Projects</li>
+            <li (mouseenter)="activeNav='skills'" (mouseleave)="activeNav=''" routerLink="/home">Blog</li>
+            <li (mouseenter)="activeNav='about'" (mouseleave)="activeNav=''" routerLink="/about">About</li>
+            <li (mouseenter)="activeNav='contact'" (mouseleave)="activeNav=''" routerLink="/contact">Contact</li>
         </ul>
     </nav>
     <div class="nav-highlighter-wrapper center-stage absolute-bottom">
