--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -91,6 +91,9 @@
 /* Overview Styles - End */
 
 @media (max-width: 650px) {
+    .home-content {
+        margin-top: 30em;
+    }
     .overview button {
         margin-top: -30px;
     }
