--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -12,7 +12,6 @@
     border-bottom: none;
     padding: 0;
     transition: height 0.5s;
-    /*overflow: hidden;*/
 }
 .absolute-bottom {
     position: absolute;
@@ -78,16 +77,17 @@
     right: 0;
     height: 19.3em;
     overflow: hidden;
-    transition: height .5s ease-out;
+    transition: height 0.5s ease-out;
 }
 .me-card {
     position: absolute;
-    height: 19.3em;
+    height: 100%;
     margin: 0 auto 0;
     transform: translateY(0);
     left: 0;
     right: 0;
-    transition: transform .5s ease-out;
+    background: linear-gradient(140deg, #f31b48, #f31b48, #940590, #0ab779);
+    transition: transform 0.5s ease-out;
 }
 
 .dp.my-dp {
@@ -106,7 +106,6 @@
     padding: 2em;
     padding-left: 40%;
     color: #FFFFFF;
-    background: linear-gradient(140deg, #f31b48, #f31b48, #940590, #0ab779);
     transition: all 0.6s; 
 }
 
@@ -243,7 +242,7 @@ h1.name {
 /* Show Menu Styles - Start */
 .fix-header.show-menu .me-card {
     position: relative;
-    height: 33em;
+    /*height: 33em;*/
 }
 .fix-header.show-menu .my-card {
     height: 33.5em;
