--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="content contact-content">
   <div class="center-stage">
-    <h1>Contact Me</h1>
+    <h1>Contact</h1>
   </div>
 </div>
