Homepage Reload Fixes

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,8 @@
 /* Overview Styles - Start */
 .home-content {
     margin-top: 10em;
+    opacity: 1;
+    transition: opacity 1s;
 }
 .home-content.hide {
     opacity: 0;
