Nav Animation Initial

--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -278,6 +278,8 @@ ul.site-nav-list li {
     color: #454545;
     cursor: pointer;
     outline: none;
+    opacity: 0;
+    transition: opacity 0.8s;
 }
 /* Nav Style - End */
 
