--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,5 +1,22 @@
 <div class="content art-content">
   <div class="center-stage">
     <h1>Art</h1>
+    <div class="content-wrapper">
+      <ul class="art-list">
+        <li>
+          <img src="../assets/images/art/Farah.jpg" title="Farah" />
+        </li>
+        <li>
+          <img src="../assets/images/art/MenModel.jpg" title="Men Model" />
+        </li>
+        <li>
+          <img src="../assets/images/art/Marmaid.jpg" title="Marmaid" />
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
   </div>
 </div>
