--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -16,6 +16,11 @@
     height: 100%;
     float: right;
 }
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
 /* Button Styles - Start */
 button {
