Art UI Minor Updates

--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,22 +1,29 @@
 <div class="content art-content">
-  <div class="center-stage">
-    <h1>Art</h1>
+  <div>
+    <div class="center-stage">
+      <h1>Art</h1>
+    </div>
     <div class="content-wrapper">
-      <ul class="art-list">
-        <li>
-          <img src="../assets/images/art/Farah.jpg" title="Farah" />
-        </li>
-        <li>
-          <img src="../assets/images/art/MenModel.jpg" title="Men Model" />
-        </li>
-        <li>
-          <img src="../assets/images/art/Marmaid.jpg" title="Marmaid" />
-        </li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <div class="list-wrapper center-stage">
+        <ul class="art-list">
+          <li>
+            <img src="../assets/images/art/Farah.jpg" title="Farah" />
+          </li>
+          <li>
+            <img src="../assets/images/art/MenModel.jpg" title="Men Model" />
+          </li>
+          <li>
+            <img src="../assets/images/art/Fabric.jpg" title="Fabric" />
+          </li>
+          <li>
+            <img src="../assets/images/art/Marmaid.jpg" title="Marmaid" />
+          </li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
