--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -2,6 +2,7 @@
     display: table-cell;
 }
 .art-list img {
-    max-height: 26em;
+    max-height: 22em;
     border: thin solid #e3e3e3;
+    margin: 1px;
 }
