--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -16,12 +16,29 @@
             <img src="../assets/images/art/Fabric.jpg" title="Fabric" />
           </li>
           <li>
+            <img src="../assets/images/art/Mortality.jpg" title="Mortality" />
+          </li>
+          <li>
+            <img src="../assets/images/art/Angelina.jpg" title="Angelina" />
+          </li>
+          <li>
+            <img src="../assets/images/art/Water.jpg" title="Water" />
+          </li>
+          <li>
+            <img src="../assets/images/art/Elena.jpg" title="Elena" />
+          </li>
+          <li>
             <img src="../assets/images/art/Marmaid.jpg" title="Marmaid" />
           </li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <img src="../assets/images/art/Twilight.jpg" title="Twilight" />
+          </li>
+          <li>
+            <img src="../assets/images/art/WomenBack.jpg" title="WomenBack" />
+          </li>
+          <li>
+            <img src="../assets/images/art/PoP.jpg" title="PoP" />
+          </li>
         </ul>
       </div>
     </div>
