--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,10 @@ section.background {
     height: 4em;
 }
 
+.main-content {
+    min-height: 1000px;
+}
+
 /* Route Components Base Styles - Start */
 .content {
     position: relative;
