--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,8 @@ body {
 
 @import url("icon-styles.css");
 
+@import url("bootstrap-responsive.css");
+
 
 /* Tab Styles - Start */
 @media (max-width: 950px) {
