--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -10,7 +10,8 @@
         <ul class="art-list">
           <li id="{{item.id}}" 
           *ngFor="let item of artList; let first = first"
-           [ngClass]="{'landscape': !item.isProtaitMode}">
+           [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPotraitMode,
+                       'landscape col-xs-8 col-sm-6 col-md-6 col-lg-6': !item.isPotraitMode}">
             <img title="{{item.title}}" alt="{{item.alt}}" src="{{item.url}}" />
           </li>
         </ul>
