--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -4,6 +4,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+.content-wrapper {
+    margin-top: 2em;
+}
 .dp {
     position: relative;
     float: left;
