--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -7,7 +7,7 @@
 }
 
 .art-list img {
-    position: absolute;
+    position: relative;
     height: 100%;
     border: thin solid #e3e3e3;
     opacity: 1;
