--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -6,11 +6,12 @@
     <div class="content-wrapper">
       <div class="side-info">
       </div>
-      <div class="list-wrapper center-stage" appImageOnLoad [imageItems]="imageItems">
+      <div class="list-wrapper center-stage" appImageOnLoad [imageItems]="imageItems" [loaderItems]="loaderItems" [loadingClass]="'animate'">
+        <div class="loading-icon" #loader>
+          <i class="icon-load-c"></i>
+        </div>
         <ul class="art-list">
-          <li id="{{item.id}}" 
-          *ngFor="let item of artList; let first = first"
-           [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPotraitMode,
+          <li id="{{item.id}}" *ngFor="let item of artList; let first = first" [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPotraitMode,
                        'landscape col-xs-8 col-sm-6 col-md-6 col-lg-6': !item.isPotraitMode}">
             <img #imgItem title="{{item.title}}" alt="{{item.alt}}" src="{{item.url}}" />
           </li>
