--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -24,7 +24,36 @@ ul {
     padding: 0;
     list-style: none;
 }
-
+.loading-icon {
+    position: absolute;
+    font-size: 3em;
+    color: #454545;
+    margin: auto;
+    width: 1em;
+    height: 1em;
+    left: 0;
+    right: 0;
+    display: none;
+}
+.loading-icon i {
+    position: absolute;
+    margin-top:-4px;
+}
+.loading-icon.animate {
+    display: block;
+    animation-name: spin;
+    animation-duration: 500ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
 /* Button Styles - Start */
 button {
     position: relative;
