Adding favicon and eot font

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @font-face{
-    font-family:"Playfair Display";
-    src:url("assets/fonts/PlayfairDisplay-Regular.ttf");
+    font-family: "Playfair Display";
+    src: url("assets/fonts/PlayfairDisplay-Regular.eot"),
+         url("assets/fonts/PlayfairDisplay-Regular.ttf") format('truetype');
 }
 
 body {
