Fixes and Art sub header addition

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,6 +31,15 @@ section.background {
     color: #454545;
     font-weight: normal;
 }
+
+.content h2 {
+    font-weight: normal;
+    font-size: 1em;
+    letter-spacing: 0.15em;
+    border-top: thin dotted #cdcdcd;
+    margin: 0;
+    padding: 1em 0.5em;
+}
 /* Route Components Base Styles - End */
 
 /* Tab Styles - Start */
