--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -2,6 +2,7 @@
   <div>
     <div class="center-stage">
       <h1>Art</h1>
+      <h2>A collection of my sketches and paintings</h2>
     </div>
     <div class="content-wrapper">
       <div class="side-info">
