--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,9 @@
   <div class="main-content">
     <router-outlet></router-outlet>
   </div>
-  <footer class="main-footer"></footer>
+  <footer class="main-footer">
+    <div class="logo-section">
+      <i class="icon-logo-svg"></i>
+    </div>
+  </footer>
 </section>
