--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -11,7 +11,7 @@
         <div class="loading-icon" #loader>
           <i class="icon-load-c"></i>
         </div>
-        <ul class="art-list">
+        <ul class="art-list clearfix">
           <li id="{{item.id}}" *ngFor="let item of artList; let first = first" [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPotraitMode,
                        'landscape col-xs-8 col-sm-6 col-md-6 col-lg-6': !item.isPotraitMode}">
             <img #imgItem title="{{item.title}}" alt="{{item.alt}}" src="{{item.url}}" />
