--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 /* Overview Styles - Start */
 .home-content {
-    margin-top: 10em;
+    margin-top: 15em;
     opacity: 1;
     transition: opacity 1s;
 }
@@ -17,14 +17,12 @@
     box-shadow: 0 1px 4px rgba(0,0,0,.05);
     border: 1px solid rgba(0,0,0,.09);
     transform: translateY(0);
-    transition: transform 1s;
+    transition: transform 0.8s ease-out;
 }
 .overview.below-view {
    transform: translateY(300px);
 }
-.overview.above-view {
-   transform: translateY(-300px);
-}
+
 .dp.overview-dp {
     background: #333333;
     height: 25em;
