--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -36,6 +36,8 @@
     background: #454545;
     opacity: 1;
     transition: margin 0.5s;
+    outline: none;
+    cursor: pointer;
 }
 .menu-section {
     background: transparent;
@@ -170,14 +172,18 @@ h1.name {
 .main-header.fix-header {
     position: fixed;
     width: 100%;
-    height: 62px;
-    padding: 60px 0 0;
+    height: 61px;
     z-index: 10;
+}
+.fix-header .hello-card {
     height: 0;
+    margin: 0;
 }
+
 .fix-header .logo-section {
-    margin-left: -2px;
+    margin-left: 0;
 }
+
 .fix-header .menu-icon-top {
     top: 11px;
 }
@@ -185,8 +191,8 @@ h1.name {
     top: 27px;
 }
 .fix-header .me-card-wrapper {
-    margin-top: -2px;
-    height: 0.15em;
+    margin-top: 59px;
+    height: 2px;
 }
 .fix-header .me-card {
     position: relative;
@@ -202,7 +208,7 @@ h1.name {
 .fix-header .my-card {
     position: relative;
     width: 100%;
-    height: 0.15em;
+    height: 2px;
     padding-top: 0;
     padding-bottom: 0;
 }
@@ -240,20 +246,20 @@ h1.name {
 /* Fixed Header Styles - End */
 
 /* Show Menu Styles - Start */
-.fix-header.show-menu .me-card {
+.show-menu .me-card {
     position: relative;
     /*height: 33em;*/
 }
-.fix-header.show-menu .my-card {
-    height: 33.5em;
+.show-menu .my-card>* {
+    display: none;
 }
-.fix-header.show-menu .me-card-wrapper {
+.show-menu .me-card-wrapper {
     height: 35em;
 }
-.fix-header.show-menu .site-nav {
+.show-menu .site-nav {
     height: 30em;
 }
-.fix-header.show-menu ul.site-nav-list {
+.show-menu ul.site-nav-list {
     opacity: 1;
 }
 /* Show Menu Styles - End */
@@ -366,13 +372,24 @@ ul.site-nav-list li.show {
     .logo-menu {
         margin: 9px auto;
         z-index: 7;
-        padding: 5px;
+        padding: 1px 3px;
     }
-    .menu-section, .logo-section {
+    .logo-section, .menu-icon, .menu-icon-top, .menu-icon-bottom{
         background: #FFFFFF;
     }
-    .menu-icon, .menu-icon-top, .menu-icon-bottom {
-        background: #454545;
+    .logo-section {
+        margin-left: 0;
+        transition: background 0.5s;
+    }
+    .menu-icon-top {
+        top: 11px;
+    }
+    .menu-icon-bottom {
+        top: 27px;
+    }
+    .menu-section {
+        float: right;
+        width: 40px;
     }
     .hello-card {
         margin-top: 3em;
@@ -387,6 +404,7 @@ ul.site-nav-list li.show {
     }
     .me-card {
         height: 41.5em;
+        background: transparent;
     }
     .my-card-wrapper {
         position: relative;
@@ -410,7 +428,6 @@ ul.site-nav-list li.show {
 
     /* Fixed Header Styles - Start */
     .fix-header .logo-menu {
-        padding: 0;
         z-index: 20;
     }
     .fix-header .logo-section {
@@ -420,20 +437,19 @@ ul.site-nav-list li.show {
         background: #454545;
     }
     .fix-header .me-card-wrapper {
-        height: auto;
+        margin-top: 51px;
     }
     .fix-header .me-card {
-        height: auto;
+        height: 2px;
+    }
+    .fix-header .my-card-wrapper {
+        margin-top: 0;
     }
     .fix-header .my-dp {
         display: none;
     }
     .fix-header .my-card {
         margin-top: 0
-    }
-    .fix-header .my-card-wrapper {
-        margin-top: 0;
-        height: 0.15em;
     }
     .fix-header .site-nav {
         display: block;
@@ -458,6 +474,10 @@ ul.site-nav-list li.show {
         margin-top: 0;
     }
     /* Initial Header Styles - End */
+
+    .show-menu .my-card-wrapper {
+        transition: margin-top 0.5s;
+    }
 }
 
 @media (max-width: 650px) {
