--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -1,11 +1,11 @@
-<div class="main-header" [ngClass]="{'fix-header': isHeaderFix, 'initial-header': isInitial, 'show-menu': showMenu}" >
+<div class="main-header" [ngClass]="{'fix-header': isHeaderFix || showMenu, 'initial-header': isInitial, 'show-menu': showMenu}" >
     <div class="logo-menu center-stage">
         <div class="menu-section" (click)="toggleMenu()">
             <div class="menu-icon-top"></div>
             <div class="menu-icon"></div>
             <div class="menu-icon-bottom"></div>
         </div>
-        <div class="logo-section">
+        <div class="logo-section" routerLink="/home" (click)="showMenu = false;">
             <i class="icon-logo-svg"></i>
         </div>
     </div>
@@ -19,7 +19,7 @@
                 <app-js-carousel [slideItems]=slideList [play]=play></app-js-carousel>
             </div>
             <div class="my-card-wrapper" appJsOnscroll padding=60 [activateScroll]=activateScroll (onStateChange)="headerStateChange($event)">
-                <div id="test" class="my-card">
+                <div class="my-card">
                     <h1 class="name">Jayabratha Saha</h1>
                     <div class="title">Artist & Developer</div>
                     <div class="github-link"><i class="icon-social-github"></i></div>
